--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ const onSend = (e) => {
 		url: googleAppMailUrl,
 		method: 'POST',
 		success: (data) => {
-			console.log(data)
+			//console.log(data)
 		},
 		error: (xhr, err) => {
-			console.log(err);
+			//console.log(err);
 		}
 	});
 }
